# Hackathon

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.turbo/daemon/: aaffc05659a40ad5-turbo.log.2026-02-01
apps/api/: .env  package.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  main.ts
apps/api/src/prisma/: prisma.service.ts
apps/api/src/redis/: redis.service.ts
apps/web/: .dockerignore  Dockerfile  README.md  RUNNING.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: layout.tsx  page.tsx
apps/web/app/create/: page.tsx
apps/web/app/following/: page.tsx
apps/web/app/learn/: page.tsx
apps/web/app/likes/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/app/scenes/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/uploads/: page.tsx
docs/: 00-index.md  01-product-spec.md  02-architecture.md  03-database-schema.md  04-api-spec.md  05-continuity-system.md  06-async-pipeline.md  07-video-storage.md  08-scalability.md  09-security.md  10-risk-register.md  11-roadmap.md
infra/docker/: docker-compose.dev.yml
services/generator/: .env.example  README.md  pyproject.toml
services/generator/src/: __init__.py  bullmq_worker.py  config.py  worker.py
services/generator/src/services/: __init__.py  continuity.py  database.py  hls_builder.py  script_expander.py  storage.py  video_generator.py
services/generator/src/tasks/: generation.py
(+40 files in other folders)
