[project]
name = "storyforge-generator"
version = "0.1.0"
description = "StoryForge video generation worker service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.10.0",
    "ffmpeg-python>=0.2.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
